--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "list": "^2.0.13",
     "mongoose": "^4.8.5",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "retry": "^0.12.0"
