--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "node-xlsx": "^0.12.1",
+    "pug": "^2.0.3",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "retry": "^0.12.0"
