--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.8.5",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "node-schedule": "^1.3.0",
     "node-xlsx": "^0.12.1",
     "pug": "^2.0.3",
     "request": "^2.85.0",
